fix some layout issues on iPhone

--- a/client/style/app.styl
+++ b/client/style/app.styl
@@ -39,7 +39,6 @@ rounded-corners(radius)
 
 .u-narrow
   max-width: 33rem !important
-  min-width: 24rem !important
 
 .u-pageMargin
   margin: 1rem
@@ -51,11 +50,12 @@ rounded-corners(radius)
 .u-fillViewport
   display: block
   position: relative
+  width: 100%
   height: 100%
 
 .NavBar
   height = 2rem
-  height: height
+  min-height: height
   width: 100%
   line-height: height
   z-index: 1
@@ -78,5 +78,3 @@ rounded-corners(radius)
     text-decoration: underline
     color: darkslateblue
 
-.Brick
-  max-width: 100%
