--- a/client/style/base.styl
+++ b/client/style/base.styl
@@ -77,6 +77,7 @@ ul
 
 figure
   margin: 0 1rem 0 1rem
+  min-width: 17rem
 
 figcaption
   color: slategray
