--- a/client/style/size.css
+++ b/client/style/size.css
@@ -49,6 +49,10 @@
   width: 100% !important;
 }
 
+.u-sizeFitViewport {
+  max-width: 100%;
+}
+
 /* Proportional widths
    ========================================================================== */
 
